# tibetan-text-metrics

./: .coverage.Daniels-Mini.fritz.box.45504.XwdgHWQx  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  lcs_vs_jaccard_explanation.md  profile_script.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-app.yml
src/: analyzer.py  fast_lcs.pyx  main.py  metrics.py  text_processor.py  visualizer.py
src/tibetan_text_metrics/: __init__.py  analyzer.py  fast_patterns.pyx  main.py  metrics.py  pattern_analyzer.py  pca_core.py  pca_visualizer.py  text_processor.py  visualizer.py
tests/: test_analyzer.py  test_main.py  test_metrics.py  test_pca.py  test_pca_visualizer.py  test_text_processor.py  test_visualizer.py
webapp/: .gitignore  README.md  TTM Webapp Gitignore  TTM Webapp HF app.py  TTM Webapp README.md  TTM Webapp Requirements.txt  TTM Webapp Theme.py  app.py  pyproject.toml  requirements.txt  setup.py  theme.py  user_guide.md
webapp/pipeline/: LLM Service.py  Metrics from TTM Webapp.py  Progressive Loader from TTM Webapp.py  TTM Webapp Visualize.py  fast_lcs.pyx  fasttext_embedding.py  llm_interpreter.py  metrics.py  process.py  progressive_ui.py  puter_api.py  semantic_embedding.py  stopwords_bo.py  stopwords_lite_bo.py  tokenize.py  ttm webapp hf embedding.py  ttm webapp hf upload.py  visualize.py
