[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29.0", "numpy>=1.26.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.ext-modules]
extension-name = "tibetan_text_metrics.fast_lcs"
sources = ["src/tibetan_text_metrics/fast_lcs.pyx"]
include-dirs = ["${NUMPY_INCLUDE}"]

[project]
name = "tibetan-text-metrics"
version = "0.1.0"
description = "A Python tool for computing text similarity metrics on POS-tagged Tibetan texts"
authors = [
    {name = "Daniel Wojahn", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "Cython>=3.0.8",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "rapidfuzz>=3.6.1",
    "scipy>=1.11.4",
    "gensim>=4.3.2",
    "numpy>=1.26.3",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pandas-stubs>=2.1.4.231227",
    "types-tqdm>=4.66.0.5",
    "memory-profiler>=0.61.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=xml --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
