[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29.0", "numpy>=1.26.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.setuptools.ext-modules]]
name = "tibetan_text_metrics.fast_lcs"
sources = ["src/tibetan_text_metrics/fast_lcs.pyx"]
include-dirs = ["numpy"]

[[tool.setuptools.ext-modules]]
name = "tibetan_text_metrics.fast_patterns"
sources = ["src/tibetan_text_metrics/fast_patterns.pyx"]
include-dirs = ["numpy"]

[project]
name = "tibetan-text-metrics"
version = "0.3.0"
description = "A Python tool for computing text similarity metrics on POS-tagged Tibetan texts"
authors = [
    {name = "Daniel Wojahn", email = "daniel.wojahn@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Tibetan",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "Cython>=3.0.8",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "rapidfuzz>=3.6.1",
    "scipy>=1.11.4",
    "numpy>=1.26.3",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.1",
    "plotly>=5.18.0"
]
